# batchor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  VERSIONING.md  mkdocs.yml  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/batchor-dev/: SKILL.md
.agents/skills/batchor-dev/agents/: openai.yaml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: README.md  doc-map.md  index.md  smoke-test.md
docs/assets/stylesheets/: extra.css
docs/design_docs/: ANTHROPIC_BATCHING.md  ARCHITECTURE.md  BOUNDARY_AND_PHILOSOPHY.md  GEMINI_BATCHING.md  INGESTION_POLLING_FIX.md  OPENAI_BATCHING.md  ROADMAP.md  RUNTIME_DURABILITY_0_0_7.md  STORAGE_AND_RUNS.md  STORAGE_MIGRATIONS.md
docs/getting-started/: cli.md  how-it-works.md  installation.md  python-api.md  use-cases.md
docs/plans/: DURABLE_EXECUTION_BOUNDARY.md  README.md
docs/policies/: contributing.md
docs/reference/: api.md
plans/: README.md
plugins/batchor/: .mcp.json
plugins/batchor-agent-tools/: .mcp.json
plugins/batchor-agent-tools/.codex-plugin/: plugin.json
plugins/batchor-agent-tools/scripts/: batchor_repo_mcp.py
plugins/batchor/.codex-plugin/: plugin.json
plugins/batchor/scripts/: batchor_user_mcp.py
plugins/batchor/skills/use-batchor/: SKILL.md
plugins/batchor/skills/use-batchor/agents/: openai.yaml
plugins/batchor/skills/use-batchor/references/: cli-workflows.md  python-pipelines.md
src/batchor/: __init__.py  cli.py  enums.py  models.py  openai_provider.py  provider.py  retry.py  runner.py  sqlite_storage.py  state.py  storage_registry.py  tokens.py  types.py  validation.py
src/batchor/artifacts/: __init__.py  base.py  local.py
src/batchor/core/: __init__.py  enums.py  exceptions.py  models.py  responses.py  types.py
src/batchor/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  registry.py
src/batchor/runtime/: __init__.py  artifacts.py  context.py  execution.py  ingestion.py  polling.py  results.py  retry.py  run_handle.py  runner.py  runner_execution.py  submission.py  tokens.py  validation.py
src/batchor/sources/: __init__.py  base.py  composite.py  files.py
src/batchor/storage/: __init__.py  memory.py  postgres.py  postgres_store.py  registry.py  sqlite.py  sqlite_codec.py  sqlite_lifecycle.py  sqlite_protocol.py  sqlite_queries.py  sqlite_results.py  sqlite_schema.py  sqlite_store.py  state.py  state_models.py
tests/integration/: test_batchor_gemini_runner.py  test_batchor_live_anthropic.py  test_batchor_live_gemini.py  test_batchor_live_openai.py  test_batchor_runner.py
tests/unit/: test_agent_tooling.py  test_batchor_anthropic_provider.py  test_batchor_architecture.py  test_batchor_artifacts.py  test_batchor_cli.py  test_batchor_gemini_provider.py  test_batchor_openai_provider.py  test_batchor_results.py  test_batchor_retry.py  test_batchor_runtime_ingestion.py  test_batchor_runtime_polling.py  test_batchor_runtime_submission.py  test_batchor_sources.py  test_batchor_sqlite_storage_flow.py  test_batchor_storage.py  test_batchor_storage_contracts.py  test_batchor_tokens.py  test_batchor_validation.py
tmp/live_structured_checks/default/: live.sqlite3  terminal_results.jsonl
tmp/live_structured_checks/default/artifacts/live_structured_default_3ba9f0f8f6/outputs/: batch_69cff9160c54819098c6194c41ff5da4_error.jsonl  batch_69cff9201ca0819096489be29d0f45ed_error.jsonl  batch_69cff995277c8190b79dd5d2197ce0fb_error.jsonl
tmp/live_structured_checks/default/artifacts/live_structured_default_3ba9f0f8f6/requests/: requests_4a57a5a0cfaf41f4b6b7ee67659d38b4.jsonl  requests_cd4fe80a425046d7847f8ffc754e663b.jsonl  requests_ea80d956a5294660a5ccc85c8dc2079d.jsonl
tmp/live_structured_checks/default/artifacts/live_structured_default_41c584f59d/requests/: requests_944d0268aaa4461cb2108fe203fbce81.jsonl
tmp/live_structured_checks/default/exports/live_structured_default_41c584f59d/: manifest.json
tmp/live_structured_checks/default/exports/live_structured_default_41c584f59d/live_structured_default_41c584f59d/outputs/: batch_69cffa54ce88819093894a8ddbae1513_output.jsonl
tmp/live_structured_checks/minimal/: live.sqlite3  terminal_results.jsonl
tmp/live_structured_checks/minimal/artifacts/live_structured_minimal_7e5e22749a/requests/: requests_8eef81a5f1cc458db03b281b11f997c3.jsonl
tmp/live_structured_checks/minimal/exports/live_structured_minimal_7e5e22749a/: manifest.json
tmp/live_structured_checks/minimal/exports/live_structured_minimal_7e5e22749a/live_structured_minimal_7e5e22749a/outputs/: batch_69cffa6543dc8190a84ac348aff610ca_output.jsonl
tmp/live_structured_workaround/default/: live.sqlite3  terminal_results.jsonl
tmp/live_structured_workaround/default/artifacts/live_structured_workaround_947493e98c/outputs/: batch_69cff9cb71b08190a24d62ece0e22121_output.jsonl
tmp/live_structured_workaround/default/exports/live_structured_workaround_947493e98c/: manifest.json
(+1 files in other folders)
