[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "batchor"
version = "0.0.1"
description = "Structured-first OpenAI Batch runner with typed Pydantic results."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<4"
dependencies = [
    "openai>=2.7.1",
    "pyarrow>=20.0.0,<30",
    "psycopg[binary]>=3.2.0,<4",
    "pydantic>=2.12.0,<3",
    "sqlalchemy>=2.0.43,<3",
    "tiktoken>=0.12.0",
    "typer>=0.16.0,<1",
    "python-dotenv>=1.0.1,<2",
]
keywords = ["openai", "batch", "sqlite", "cli", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://github.com/AnsonDev42/batchor#readme"
Repository = "https://github.com/AnsonDev42/batchor"
Issues = "https://github.com/AnsonDev42/batchor/issues"

[project.scripts]
batchor = "batchor.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.9.0",
    "ty>=0.0.26",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.14,<10",
    "mkdocstrings[python]>=0.30.1,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/batchor"]

[tool.pytest.ini_options]
addopts = "-q -n auto --strict-config --strict-markers --cov=src --cov-report=term-missing --cov-fail-under=85"
pythonpath = ["src"]
markers = [
    "unit: fast isolated tests",
    "integration: fake-provider and multi-component tests",
    "live: manual live-provider smoke tests that require OpenAI credentials",
]

[tool.ty.environment]
root = ["./src", "."]

[tool.ty.src]
include = ["src"]
exclude = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",    # line too long — handled by ruff format
    "B006",    # mutable default argument — handled by dataclass field()
    "B008",    # Typer option declarations are intentionally expressed as defaults
    "SIM108",  # ternary operator — readability preference
    "UP040",   # PEP 695 type aliases can be migrated incrementally
    "UP046",   # PEP 695 generic syntax can be migrated incrementally
    "UP007",   # use X | Y for unions — already using modern syntax
    "UP035",   # deprecated imports — some stubs need them
]

[tool.ruff.lint.isort]
known-first-party = ["batchor"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
